myteo/test/analyze/type_check/if.myte
module Test

fun main() {
  if (true) {
    (1: unit);
  } else {
    (2: unit);
  }

  if (false) {}

  val a = true;
  if (a) {}

  if (1) {}
  if (()) {}

  val b = 1;
  if (b) {}
}